@startuml
'Generated by Modeler - do not change.

state "Registered" as registered

state "To Decide" as to_decide

state "Needs Clarification" as needs_clarification

state "Accepted" as accepted

state "Rejected" as rejected

[*] --> registered
registered --> to_decide : Sent To Decision
to_decide --> needs_clarification : Clarification Requested
needs_clarification --> to_decide : Sent To Decision
to_decide --> accepted : Accepted
to_decide --> rejected : Rejected
accepted --> [*]
rejected --> [*]

@enduml

